[package]
name = "decryptor"
version = "0.1.0"
edition = "2021"
rust-version = "1.72"

[[bin]]
name = "decryptor"
path = "crates/core/main.rs"

[[bin]]
name = "rpc-client"
path = "crates/core/rpc_client.rs"

[workspace]
members = [
    "crates/primitives",
    "crates/runtime",
]
resolver = "2"

[workspace.dependencies]
primitives = { version = "0.1.0", path = "crates/primitives" }
runtime = { version = "0.1.0", path = "crates/runtime" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"

[dependencies]
anyhow = "1"
futures = "0.3"
jsonrpsee = { version = "0.20", features = ["server", "http-client", "ws-client", "macros", "client-ws-transport-native-tls"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.3", features = ["env-filter"] }
tokio = { version = "1.16", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tower-http = { version = "0.4.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
hyper = "0.14.20"
console-subscriber = "0.1.8"



primitives = { workspace = true }
runtime = { workspace = true }